--- a/parkalot-reservation/src/parkalot-reservation-clicker/parkalot-reservation-clicker.csproj
+++ b/parkalot-reservation/src/parkalot-reservation-clicker/parkalot-reservation-clicker.csproj
@@ -3,7 +3,7 @@
     <PropertyGroup>
         <OutputType>Exe</OutputType>
         <TargetFramework>net8.0</TargetFramework>
-        <RootNamespace>parkalot_reservation</RootNamespace>
+        <RootNamespace>parkalot_reservation_clicker</RootNamespace>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
     </PropertyGroup>
