Add request sender

--- a/parkalot-reservation/src/parkalot-reservation-request/appsettings-template.json
+++ b/parkalot-reservation/src/parkalot-reservation-request/appsettings-template.json
@@ -7,11 +7,11 @@
     }
   },
   "Configuration": {
-    "Url": "",
+    "BaseUri": "",
     "Bearer": "",
     "MeId": "",
-    "ParkingIdDesk": "",
-    "ParkingIdParking": "",
+    "DeskParkingId": "",
+    "ParkingParkingId": "",
     "DeskBodyV": ""
   }
 }
