Add GetToken, Add Reserve Desk

--- a/parkalot-reservation/src/parkalot-reservation-request/appsettings-template.json
+++ b/parkalot-reservation/src/parkalot-reservation-request/appsettings-template.json
@@ -12,6 +12,9 @@
     "MeId": "",
     "DeskParkingId": "",
     "ParkingParkingId": "",
-    "DeskBodyV": ""
+    "DeskBodyV": "",
+    "RefreshTokenBaseUrl": "",
+    "RefreshToken": "",
+    "Key": ""
   }
 }
