--- a/parkalot-reservation/src/parkalot-reservation-request/parkalot-reservation-request.csproj
+++ b/parkalot-reservation/src/parkalot-reservation-request/parkalot-reservation-request.csproj
@@ -9,6 +9,7 @@
     </PropertyGroup>
 
     <ItemGroup>
+      <PackageReference Include="Microsoft.AspNetCore.WebUtilities" Version="8.0.13" />
       <PackageReference Include="Microsoft.Extensions.Configuration" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="9.0.2" />
       <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="9.0.2" />
